syntax = "proto3";

package pb;
import "barber/service_category.proto";
option go_package = "barbershop/src/pb/barber";


message CreateServiceCategoryRequest {
    string name = 1;
    string barber_shop_id = 2;
}

message CreateServiceCategoryResponse {
    ServiceCategory service_category = 1;
}

message ListServiceCategoryRequest {
    string barber_shop_id = 1;
}

message ListServiceCategoryResponse {
    repeated ServiceCategory service_categories = 1;
}

message UpdateServiceCategoryRequest {
    int32 id = 1;
    optional string name = 2;
    string barber_shop_id = 3;
}

message UpdateServiceCategoryResponse {
    ServiceCategory service_category = 1;
}

message DeleteServiceCategoryRequest{
    repeated int32 ids = 1;
    string barber_shop_id = 2;
}

message DeleteServiceCategoryResponse{
    string message = 1;
}

message UpdateCategoryPositionRequest{
    repeated CategoryPosition category_positions = 1;
    string barber_shop_id = 2;
}

message UpdateCategoryPositionResponse{
    string message = 1;
}
