syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message ServiceCategories {
    string id = 1;
    string name = 2;
    bool is_global = 3;
    google.protobuf.Timestamp create_at = 4;
    google.protobuf.Timestamp update_at = 5;
}